# trik-media-sensors-arm

./: .gitignore
ov7670/: Makefile.am  Makefile.in  aclocal.m4  autogen  config.h  config.h.in  configure  configure.ac
ov7670/autom4te.cache/: output.0  requests  traces.0
ov7670/edge_line_sensor/: Makefile.in
ov7670/edge_line_sensor/include/internal/: thread_video.h
ov7670/edge_line_sensor/src/: Makefile.am  Makefile.in  edge_line_sensor_arm  module_ce.c  runtime.c
ov7670/jpeg_encoder/: Makefile.am  Makefile.in
ov7670/jpeg_encoder/include/internal/: common.h  module_ce.h  module_rc.h  runtime.h
ov7670/jpeg_encoder/src/: Makefile.am  Makefile.in  jpeg_encoder_arm  main.c  module_ce.c  module_rc.c  runtime.c  thread_video.c
ov7670/line_sensor/: Makefile.in
ov7670/line_sensor/include/internal/: module_v4l2.h
ov7670/line_sensor/src/: Makefile.am  Makefile.in  line_sensor_arm  module_ce.c  module_v4l2.c  thread_video.c
ov7670/motion_sensor/: Makefile.am  Makefile.in
ov7670/motion_sensor/include/internal/: common.h  module_ce.h  module_fb.h  module_v4l2.h  runtime.h  thread_input.h
ov7670/motion_sensor/src/: Makefile.am  Makefile.in  main.c  module_ce.c  module_rc.c  motion_sensor_arm  runtime.c  thread_video.c
ov7670/mxn_sensor/: Makefile.am  Makefile.in
ov7670/mxn_sensor/include/internal/: common.h  module_ce.h  module_rc.h  runtime.h
ov7670/mxn_sensor/src/: Makefile.am  Makefile.in  module_ce.c  module_rc.c  mxn_sensor_arm  runtime.c  thread_input.c  thread_video.c
ov7670/object_sensor/: Makefile.am  Makefile.in  TODO  trik_vidtranscode_cv.h
ov7670/object_sensor/include/internal/: common.h  module_rc.h
ov7670/object_sensor/src/: Makefile.am  Makefile.in  module_ce.c  module_fb.c  module_rc.c  module_v4l2.c  object_sensor_arm  runtime.c  todom
ov7670/object_sensor/src/.deps/: main.Po  module_ce.Po  module_fb.Po  module_rc.Po  module_v4l2.Po  runtime.Po  thread_input.Po  thread_video.Po
release/ov7670/: edge-line-sensor-ov7670  edge-line-sensor-ov7670.default  jpeg-encoder-ov7670  jpeg-encoder-ov7670.default  line-sensor-ov7670  motion-sensor-ov7670  motion-sensor-ov7670.default  mxn-sensor-ov7670  mxn-sensor-ov7670.default  object-sensor-ov7670  object-sensor-ov7670.default
release/webcam/: line-sensor-webcam  line-sensor-webcam.default  object-sensor-webcam  object-sensor-webcam.default
webcam/: Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
webcam/line_sensor/: Makefile.in
webcam/line_sensor/include/internal/: common.h  module_ce.h  module_rc.h  runtime.h
webcam/line_sensor/src/: Makefile.am  Makefile.in  line_sensor_arm  module_ce.c  module_fb.c  module_rc.c  module_v4l2.c  runtime.c  thread_video.c
webcam/object_sensor/: Makefile.am  Makefile.in
webcam/object_sensor/include/internal/: module_v4l2.h  runtime.h
webcam/object_sensor/src/: Makefile.am  Makefile.in  module_ce.c  module_fb.c  module_v4l2.c  object_sensor_arm  runtime.c  thread_input.c  thread_video.c
