ACLOCAL_AMFLAGS		= -I m4

noinst_HEADERS		= include/internal/common.h \
			  include/internal/module_ce.h \
			  include/internal/module_fb.h \
			  include/internal/module_rc.h \
			  include/internal/module_v4l2.h \
			  include/internal/runtime.h \
			  include/internal/thread_input.h \
			  include/internal/thread_video.h


SUBDIRS			= build
